[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/ui/menu/elements/Separator.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/menu/layouts/empty_layout.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/menu/elements/ListButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/menu/layouts/layout_01.gd" type="Script" id=4]

[node name="LayoutContainer" instance=ExtResource( 2 )]
script = ExtResource( 4 )

[node name="TopPlaceHolder" parent="." index="0"]
margin_bottom = 196.0

[node name="ListButton" parent="." index="1" instance=ExtResource( 3 )]
margin_top = 196.0
margin_bottom = 236.0

[node name="Seperator" parent="." index="2" instance=ExtResource( 1 )]

[node name="ListButton2" parent="." index="3" instance=ExtResource( 3 )]
margin_top = 244.0
margin_bottom = 284.0

[node name="Left" parent="ListButton2/HBoxContainer" index="0"]
text = "  OPTIONS"

[node name="Seperator2" parent="." index="4" instance=ExtResource( 1 )]
margin_top = 284.0
margin_bottom = 292.0

[node name="ListButton3" parent="." index="5" instance=ExtResource( 3 )]
margin_top = 292.0
margin_bottom = 332.0

[node name="Left" parent="ListButton3/HBoxContainer" index="0"]
text = "  CREDITS"

[node name="Seperator3" parent="." index="6" instance=ExtResource( 1 )]
margin_top = 332.0
margin_bottom = 340.0

[node name="ListButton4" parent="." index="7" instance=ExtResource( 3 )]
margin_top = 340.0
margin_bottom = 380.0

[node name="Left" parent="ListButton4/HBoxContainer" index="0"]
text = "  HELP"

[node name="BottomPlaceHolder" parent="." index="8"]
margin_top = 380.0

[editable path="ListButton"]
[editable path="Seperator"]
[editable path="ListButton2"]
[editable path="ListButton3"]
[editable path="ListButton4"]
